# NoseDive

./: .gitignore  BUILD.md  go.mod  go.sum  run.sh
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  nosedive_jni.cpp
android/app/src/main/java/com/nosedive/app/: MainActivity.kt
cmd/nosedive/: main.go
docs/: APP_SETUP_WIZARD.md  APP_TUNING.md  APP_VISION.md  PROTOCOL.md  VESC_TOOL_FIRMWARE.md
docs/superpowers/plans/: 2026-04-01-engine-ffi-refactor.md  2026-04-01-libvesc-split.md
ios/NoseDive/: Package.swift
ios/NoseDive/.swiftpm/xcode/package.xcworkspace/xcuserdata/matthewszatmary.xcuserdatad/: UserInterfaceState.xcuserstate
ios/NoseDive/.swiftpm/xcode/xcuserdata/matthewszatmary.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/NoseDive/Sources/App/: ContentView.swift  NoseDiveApp.swift
ios/NoseDive/Sources/CNoseDive/: module.modulemap  nosedive_ffi.h
ios/NoseDive/Sources/Models/: Board.swift  BoardState.swift  RiderProfile.swift
ios/NoseDive/Sources/Services/: BLEService.swift  Storage.swift  TCPTransport.swift  VESCPacket.swift
ios/NoseDive/Sources/Theme/: CardModifier.swift  Theme.swift
ios/NoseDive/Sources/ViewModels/: BoardManager.swift
ios/NoseDive/Sources/Views/: DashboardView.swift  FirmwareCheckView.swift  HomeView.swift  ProfileView.swift  RadarChartView.swift  RidesView.swift  SetupWizardView.swift  TuneView.swift
lib/nosedive/: CMakeLists.txt  README.md
lib/nosedive/firmware/refloat/: refloat-1.2.1.vescpkg
lib/nosedive/include/nosedive/: ble_transport.hpp  commands.h  commands.hpp  crc.hpp  engine.hpp  ffi.h  nosedive.h  nosedive.hpp  profile.hpp  protocol.h  protocol.hpp  refloat.hpp  setupboard.hpp  storage.hpp
lib/nosedive/src/: ble_transport.cpp  commands.cpp  crc.cpp  engine.cpp  ffi.cpp  profile.cpp  protocol.cpp  refloat.cpp  setupboard.cpp  storage.cpp
lib/nosedive/strings/: en.json
lib/nosedive/tests/: test_helpers.hpp  test_main.cpp  test_setup.cpp
lib/vesc/: CMakeLists.txt  README.md
lib/vesc/include/vesc/: commands.hpp  connection.hpp  crc.hpp  protocol.hpp  refloat.hpp  vesc.hpp  vescpkg.hpp
lib/vesc/src/: commands.cpp  connection.cpp  crc.cpp  protocol.cpp  refloat.cpp  vescpkg.cpp
lib/vesc/tests/: test_main.cpp
pkg/board/: profile.go
pkg/refloat/: client.go  parse.go  types.go
pkg/simulator/: ble.go  can_device.go  defaults.go  simulator.go  simulator_test.go  vesc_commands.go  web.go
pkg/simulator/web/: app.js  index.html  style.css
pkg/vesc/: ble.go  commands.go  connection.go  crc.go  protocol.go  protocol_test.go
profiles/: diy_ubox_superflux.json  funwheel_x7_lr_hs.json  onewheel_xr_vesc.json
vescsim/: README.md  appconf_default.xml  ble.go  ble_darwin.h  ble_darwin.m  ble_stub.go  can_device.go  client_test.go  commands.go  confgenerator.go  defaults.go  logging.go  main.go  persist.go  profile.go  protocol.go  refloat.go  refloat_ui.qml  simulator.go  simulator_test.go  types.go  web.go
(+7 files in other folders)
